cluster/apps/media/ombi/ingress.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: ombi
  namespace: media
spec:
  entryPoints:
    - websecure
  routes:
    - match: HOST(`ombi.${SECRET_DOMAIN}`)
      kind: Rule
      middlewares:
        - name: internal-ipwhitelist
          namespace: traefik
      services:
        - name: ombi
          port: 3579
  tls:
    secretName: ${SECRET_CERT}
